[package]
name = "counter"
version = "0.1.0"
edition = "2018"
license = "MIT"
publish = false

[dependencies]
borsh = "0.9.1"
num-derive = "0.3.3"
num-traits = "0.2"
solana-program = "1.6.12"
solana-validator = { version = "1.6.12", optional = true }
thiserror = "1.0.24"

[features]
no-entrypoint = []
test-bpf = ["solana-validator"]

# [dev-dependencies]
# assert_matches = "1.4.0"
# solana-program-test = "1.6.12"
# solana-sdk = "1.6.12"

[lib]
crate-type = ["cdylib", "lib"]
